--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="hint_search">Search</string>
     <string name="no_search_results">No results found</string>
     <string name="loading">Loading&#8230;</string>
+    <string name="dialog_close">Close</string>
 
 <!--     External Link Warning Dialog -->
     <string name="external_link_title">Warning: External link</string>
