--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,8 +27,8 @@
     <string name="nav_navigation_header">Navigation</string>
     <string name="nav_support_header">Support</string>
     <string name="nav_toolbox_header">Toolbox</string>
-    <string name="nav_app_settings">App settings</string>
-    <string name="nav_favorites">Favorites</string>
+    <string name="nav_app_settings">App settings&#8230;</string>
+    <string name="nav_favorites">Favorites&#8230;</string>
 
 <!-- 	  Settings -->
     <string name="settings_title">Settings</string>
