--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,49 +1,43 @@
 <resources>
 
-<!--     Miscellaneous -->
-
+    <!-- Miscellaneous -->
     <string name="app_name">GW2 Wiki</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_main">MainActivity</string>
     <string name="gw2w_name">Guild Wars 2 Wiki</string>
+    <string name="loading">Loading&#8230;</string>
+    <string name="no_editing">Editing not supported</string>
+
+    <!-- Search -->
     <string name="hint_search">Search</string>
     <string name="no_search_results">No results found</string>
-    <string name="loading">Loading&#8230;</string>
-    <string name="dialog_close">Close</string>
-    <string name="menu_settings">Menu Settings</string>
     <string name="search_results">Search Results</string>
 
-<!--     External Link Warning Dialog -->
+    <!-- External Link Warning Dialog -->
     <string name="external_link_title">Warning: External link</string>
     <string name="external_link_text"> The selected link, \n\n%1$s\n\nleads to another website and will open in your browser application.</string>
-    <string name="external_link_dontshow">Don\'t show me this warning again.</string>
 
-<!--     Error Dialog -->
+    <!-- Error Dialog -->
     <string name="error_connect_title">Error: No connection</string>
     <string name="error_connect_text">Please ensure your device has an internet connection and try again. </string>
     <string name="error_no_page_title">Error: Article does not exist</string>
     <string name="error_no_page_text">Sorry, we don\'t have an article on that topic yet.</string>
-    <string name="error_generic_title">Error: Whatever</string>
-    <string name="error_generic_text">Some shit done fucked up.</string>
+    <string name="error_generic_title">Error: Unknown</string>
+    <string name="error_generic_text">Something\'s gone wrong. Please try again! </string>
 
-<!-- 	  Settings -->
-    <string name="settings_title">Settings</string>
-    <string name="settings_start_page_label">Your start page</string>
-    <string name="settings_start_page_hint">Page title&#8230;</string>
-    <string name="settings_wiki_language_label">Wiki language</string>
-    <string name="settings_wiki_language_current">Current language: %1$s</string>
-    <string name="settings_wiki_language_btn">Change language&#8230;</string>
-    <string name="settings_wiki_language_dialog_title">Choose a language</string>
+    <!-- Share Picker -->
+    <string name="share_picker_title">Share page using:</string>
 
-<!-- 	   Languages -->
+    <!-- Image Dialog -->
+    <string name="dialog_close">Close</string>
+
+    <!-- Languages -->
     <string name="language_english">English</string>
     <string name="language_german">German</string>
     <string name="language_spanish">Spanish</string>
     <string name="language_french">French</string>
-    
-<!--	  Favorites -->
-	<string name="favorites_dialog_title">Your favorite pages</string>
-	<string name="no_favorites_dialog_title">You have no favorites!</string>
-	<string name="no_favorites_dialog_message">You haven\'t added any favorite articles yet. To mark an article as a favorite, tap the heart next to its title. </string>
+
+    <!-- Favorites -->
+    <string name="favorites_dialog_title">Your favorite pages</string>
+    <string name="no_favorites_dialog_title">You have no favorites!</string>
+    <string name="no_favorites_dialog_message">You haven\'t added any favorite articles yet. To mark an article as a favorite, tap the heart next to its title. </string>
 
 </resources>
